Resolved  mobile menu bug WIP: align content in about

--- a/src/app/styles/About.css
+++ b/src/app/styles/About.css
@@ -39,14 +39,17 @@
   width: 100%;
   height: auto;
   justify-content: center;
+
   margin-top: 50px;
   padding: 5rem 1rem;
 }
 
 .about_box-container {
-  display: block;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  justify-items: center;
+  justify-content: center;
+  align-items: center;
   width: min(350px, 95%);
   height: auto;
   padding: 30px;
@@ -104,9 +107,9 @@
     width: 90%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-content: center;
     align-self: center;
-    flex-wrap: wrap;
     margin: 0 auto;
   }
 }
