--- a/src/app/styles/Hidden.css
+++ b/src/app/styles/Hidden.css
@@ -9,6 +9,7 @@
   justify-content: center;
   font-size: 1.5rem;
   background-color: white;
+  color: gray;
   border: none;
   border-radius: 999px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
